--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,9 +1,8 @@
 {
-  "release-type": "simple",
-  "include-component-in-tag": false,
-  "include-v-in-tag": true,
-  "pull-request-title-pattern": "chore: release${component} ${version}",
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
-    ".": {}
+    ".": {
+      "release-type": "simple"
+    }
   }
 }
