feat(site): add logo slot and polished left navigation

--- a/manuscript/_quarto.yml
+++ b/manuscript/_quarto.yml
@@ -1,20 +1,42 @@
 project:
-  type: book
+  type: website
+  resources:
+    - ../images
 
-book:
-  title: "ECTO: Theory Development Textbook"
-  author:
-    - name: "Noah van Dongen"
-      affiliation: "Erasmus University Rotterdam"
+website:
+  title: "ECTO"
   site-url: "https://<ORG_OR_USER>.github.io/<REPO>/"
   repo-url: "https://github.com/<ORG_OR_USER>/<REPO>"
   repo-actions: [edit, issue]
-  chapters:
-    - index.qmd
-    - chapters/01-introduction.qmd
+  navbar:
+    logo: /images/logo.png
+    left:
+      - href: index.qmd
+        text: Home
+      - href: documents.qmd
+        text: Documents
+      - href: logbook.qmd
+        text: Logbook
+      - href: contact.qmd
+        text: Contact
+  sidebar:
+    style: "docked"
+    search: true
+    contents:
+      - href: index.qmd
+        text: Home
+      - href: documents.qmd
+        text: Documents
+      - href: logbook.qmd
+        text: Logbook
+      - href: contact.qmd
+        text: Contact
 
 format:
   html:
-    toc: true
-    number-sections: true
     theme: cosmo
+    css: styles.css
+    toc: true
+    toc-depth: 4
+    toc-location: left
+    smooth-scroll: true
