Use absolute GitHub Pages URL for sidebar logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 title: ECTO
+url: "https://nnnvd.github.io"
+baseurl: "/ECTO"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: light
 search_enabled: true
 heading_anchors: true
-logo: "/images/logo.png"
+logo: "https://nnnvd.github.io/ECTO/images/ECTO_logo_black.png"
 aux_links:
   Repository: "https://github.com/NNNvD/ECTO"
 
@@ -43,3 +45,4 @@ defaults:
 exclude:
   - documents.md
   - logbook-page.md
+  - legacy
